[gd_scene load_steps=53 format=3 uid="uid://y4ktplof8y3c"]

[ext_resource type="Texture2D" uid="uid://b3ehlqk2i520t" path="res://assets/sprites/dungeon/mHero_.png" id="1_0cxf1"]
[ext_resource type="Script" path="res://assets/scripts/player/player.gd" id="1_511jo"]
[ext_resource type="Texture2D" uid="uid://b7ktjn6ru0i4a" path="res://assets/sprites/playerSprites_ [version 1.0]/mPlayer_ [human].png" id="2_35top"]
[ext_resource type="PackedScene" uid="uid://ydoamsvkvmjd" path="res://scenes/components/health_component.tscn" id="2_vxtdb"]
[ext_resource type="PackedScene" uid="uid://ckf187c4wqwck" path="res://scenes/components/movement_component.tscn" id="3_fvtna"]
[ext_resource type="PackedScene" uid="uid://c5oj53s80lw1c" path="res://scenes/components/hitbox.tscn" id="4_r4pyj"]
[ext_resource type="Script" path="res://assets/scripts/player/hand.gd" id="5_x0joh"]
[ext_resource type="Script" path="res://assets/scripts/player/player_states/player_idle_state.gd" id="5_xp3sm"]
[ext_resource type="Script" path="res://assets/scripts/player/player_states/player_dash_state.gd" id="6_0evq3"]
[ext_resource type="PackedScene" uid="uid://d1bxw1ae03fmi" path="res://scenes/components/status_effects_component.tscn" id="7_8i15j"]
[ext_resource type="Script" path="res://assets/scripts/player/player_states/player_move_state.gd" id="7_bwmhs"]
[ext_resource type="PackedScene" uid="uid://dmrrebaym06l6" path="res://scenes/components/ability_slots.tscn" id="8_2wv20"]
[ext_resource type="Script" path="res://assets/scripts/states/state_machine.gd" id="8_mgete"]
[ext_resource type="Script" path="res://assets/scripts/player/player_states/player_dead_state.gd" id="8_o8qu8"]
[ext_resource type="Texture2D" uid="uid://bp0ujgfwrrxai" path="res://assets/sprites/camelot/merlin_.png" id="8_t1qvo"]
[ext_resource type="Script" path="res://assets/scripts/player/player_states/player_resting_state.gd" id="15_meny0"]
[ext_resource type="AudioStream" uid="uid://dup3swn76q3oi" path="res://assets/audio/PlayerRest.wav" id="17_clfv3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bqaof"]
atlas = ExtResource("2_35top")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70cjf"]
atlas = ExtResource("2_35top")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vt4l"]
atlas = ExtResource("2_35top")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ebk"]
atlas = ExtResource("2_35top")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8yp7"]
atlas = ExtResource("2_35top")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_210he"]
atlas = ExtResource("2_35top")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0hgw"]
atlas = ExtResource("1_0cxf1")
region = Rect2(0, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uop62"]
atlas = ExtResource("1_0cxf1")
region = Rect2(24, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_snqoh"]
atlas = ExtResource("1_0cxf1")
region = Rect2(48, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_abr51"]
atlas = ExtResource("1_0cxf1")
region = Rect2(72, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx6c8"]
atlas = ExtResource("1_0cxf1")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwt21"]
atlas = ExtResource("1_0cxf1")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv4va"]
atlas = ExtResource("1_0cxf1")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj2u5"]
atlas = ExtResource("1_0cxf1")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8rm2"]
atlas = ExtResource("1_0cxf1")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw3kg"]
atlas = ExtResource("1_0cxf1")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n86yi"]
atlas = ExtResource("1_0cxf1")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tblra"]
atlas = ExtResource("1_0cxf1")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_urave"]
atlas = ExtResource("1_0cxf1")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3bt6"]
atlas = ExtResource("1_0cxf1")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fia3w"]
atlas = ExtResource("1_0cxf1")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ak74"]
atlas = ExtResource("1_0cxf1")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_adf61"]
atlas = ExtResource("1_0cxf1")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nia5"]
atlas = ExtResource("1_0cxf1")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8n1"]
atlas = ExtResource("1_0cxf1")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7doo"]
atlas = ExtResource("1_0cxf1")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_65n8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqaof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70cjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vt4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ebk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8yp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210he")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0hgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uop62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snqoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abr51")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx6c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwt21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv4va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj2u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8rm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw3kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n86yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tblra")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urave")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3bt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fia3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ak74")
}],
"loop": false,
"name": &"receive_damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adf61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nia5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7doo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_mmgxp"]
resource_name = "idle"
length = 2.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.766667, 1, 1.2, 1.66667, 1.86667, 2.06667, 2.26667, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 57, 58, 59, 58, 57, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_rv8bt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="Animation" id="Animation_1owcj"]
resource_name = "dash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_i54mf"]
resource_name = "recieve_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.281556, 0.360157),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 64]
}

[sub_resource type="Animation" id="Animation_l5tl5"]
resource_name = "run"
length = 0.85
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7otk"]
_data = {
"RESET": SubResource("Animation_rv8bt"),
"dash": SubResource("Animation_1owcj"),
"idle": SubResource("Animation_mmgxp"),
"receive_damage": SubResource("Animation_i54mf"),
"run": SubResource("Animation_l5tl5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kh2an"]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_belmi"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_layer = 524290
collision_mask = 5
motion_mode = 1
script = ExtResource("1_511jo")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_65n8r")
animation = &"dash"
autoplay = "idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_35top")
hframes = 8
vframes = 10
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x7otk")
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_kh2an")

[node name="Hitbox" parent="." node_paths=PackedStringArray("health", "status_effects") instance=ExtResource("4_r4pyj")]
collision_layer = 32
collision_mask = 64
health = NodePath("../HealthComponent")
status_effects = NodePath("../StatusEffectsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_belmi")
debug_color = Color(0.917647, 0.0392157, 0.0352941, 0.419608)

[node name="Hand" type="Node2D" parent="."]
script = ExtResource("5_x0joh")

[node name="MoveIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.184314, 0.305882, 0.945098, 1)
z_index = 100
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_t1qvo")
region_enabled = true
region_rect = Rect2(76, 175, 8, 8)

[node name="InteractionRayCast" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="PlayerRestSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_clfv3")
volume_db = -20.0

[node name="AbilitySlots" parent="." instance=ExtResource("8_2wv20")]

[node name="HealthComponent" parent="." node_paths=PackedStringArray("character_sprite", "node") instance=ExtResource("2_vxtdb")]
unique_name_in_owner = true
character_sprite = NodePath("../CharacterSprite")
node = NodePath("..")
starting_health = 10.0

[node name="StatusEffectsComponent" parent="." instance=ExtResource("7_8i15j")]

[node name="MovementComponent" parent="." node_paths=PackedStringArray("character", "character_sprite") instance=ExtResource("3_fvtna")]
character = NodePath("..")
character_sprite = NodePath("../CharacterSprite")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_mgete")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_xp3sm")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("6_0evq3")

[node name="Rest" type="Node" parent="StateMachine"]
script = ExtResource("15_meny0")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("7_bwmhs")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_o8qu8")

[node name="DeathTimer" type="Timer" parent="StateMachine/Dead"]
wait_time = 0.7
one_shot = true

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="RestTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_timer_timeout"]
